--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,10 +1,18 @@
-*{
+*,
+*::before,
+*::after {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-.Landing{
+.landing {
+    width: 100%;
+    height: 100vh;
+    background-image: url('../assets/wallpaper.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -22,48 +30,26 @@
     border-radius: 10px;
     padding: 7.5px 15px;
 
-    .title{
+    .title {
         width: calc((100% / 12) * 4);
     }
 }
 
-
-.icon{
-    width: 100%;
-}
-.Landing {
-   width: 100%;
-   height: 100vh;
-   background-image: url('../assets/wallpaper.jpg');
-   background-size: cover;
-   background-repeat: no-repeat;
-   background-position: center;
-}
-
-.cardProduct{
-    background-color: darkcyan !important;
-    border-radius: 0 !important;
-}
-
-.mainID{
-    width: 10% !important;
-    background: darkblue;
-}
-
-.mainTitle, .mainDescription{
+.mainTitle,
+.mainDescription {
     min-width: 475px !important;
     max-width: 475px !important;
-    background: darkorchid ;
+    background: darkorchid;
 }
 
-.mainPrice{
+.mainPrice {
     background: pink;
     text-align: center !important;
-    display: flex  !important;
+    display: flex !important;
     justify-content: space-between !important;
 }
 
-.mainPrice > div{
+.mainPrice>div {
     min-width: 60px !important;
     max-width: 60px !important;
     display: flex !important;
@@ -71,12 +57,28 @@
     text-align: center !important;
 }
 
-.mainDelete, .mainEdit{
+.icon {
+    width: 100%;
+}
+
+.cardProduct {
+    background-color: darkcyan !important;
+    border-radius: 0 !important;
+}
+
+.mainID {
+    width: 10% !important;
+    background: darkblue;
+}
+
+.mainDelete,
+.mainEdit {
     min-width: 130px !important;
     max-width: 130px !important;
     display: flex !important;
     justify-content: center !important;
 }
+
 .mainEdit {
     justify-content: flex-start !important;
 }
