--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -6,7 +6,7 @@
     box-sizing: border-box;
 }
 
-.landing {
+#landing {
     width: 100%;
     height: 100vh;
     background-image: url('../assets/wallpaper.jpg');
@@ -28,11 +28,19 @@
     justify-content: space-between;
     align-items: center;
     border-radius: 10px;
-    padding: 7.5px 15px;
+    padding: 10px 15px;
 
     .title {
         width: calc((100% / 12) * 4);
     }
+}
+
+.total-price{
+    font-weight: bold;
+    margin-block: 45px 30px;
+    text-transform: uppercase;
+    color: black;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .mainTitle,
